--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container mt-5">
           <div class="profile">
           <img class="rounded-circle profilepakoy" src="assets/img/profile.jpg" alt="">
-          <h3>Hello nama saya</h3>
+          <h3>Hello My Name</h3>
           <h2>Fakih Syamaidzar</h2>
           <h3>i'm a <span class="text"></span></h3>
           <p>6th semester student at Gunadarma University</p>
