--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="about-text">
             <h2>About<span>Me</span></h2>
             <p>Hi, my name is Fakih Syamaidzar, I am currently studying at Gunadarma University with an information systems study program with effective collaboration and communication skills. Throughout my studies, I have had the opportunity to work as an assistant and tutor in the Information Systems Laboratory. This experience has allowed me to deepen my understanding of the field while helping other students.</p>
-            <a href="https://github.com/fakihsya05" class="btn-box">Check Out My Github</a>
+            <a href="https://github.com/fakihsya05" class="btn-box">Visit my GitHub</a>
           </div>
         </div>
       </section>
@@ -149,7 +149,7 @@
                           <span></span>
                       </div>
                   </div>
-                  <a href="https://github.com/fakihsya05" class="btn-box1" >Check Out My Github</a>
+                  <a href="https://github.com/fakihsya05" class="btn-box1" >Visit my GitHub</a>
               </div>
           </div>
           <!--SoftSkills-->
