--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section class="home" id="home">
         <div class="container mt-5">
           <div class="profile">
-          <img class="rounded-circle profilepakoy" src="assets/img/profile.jpg" alt="">
+          <img class="rounded-circle profilepakoy" src="assets/img/profile.JPG" alt="">
           <h3>Hello My Name</h3>
           <h2>Fakih Syamaidzar</h2>
           <h3>i'm a <span class="text"></span></h3>
