--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/style.css">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
-    <title>Hello, world!</title>
+    <title>Portofolio</title>
   </head>
   <body>
       <header class="header">
